unpackaged/main/default/objects/fferpcore__ff_Engagement__c/fferpcore__ff_Engagement__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__EngagementObjectHelp</customHelpPage>
    <description>Represents a single customer engagement that can include multiple revenue streams. Provides a 360-degree view of the current status of an engagement, enabling you to report on and analyze the relevant data, as well as monitor the entire life-cycle of your interaction with a given customer.</description>
    <label>Engagement</label>
    <nameField>
        <displayFormat>ENG{0000000}</displayFormat>
        <label>Engagement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>