unpackaged/main/default/objects/fferpcore__ff_Engagement__c/fields/fferpcore__Account__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer account this engagement relates to.</description>
    <inlineHelpText>Customer account this engagement relates to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>