unpackaged/main/default/objects/fferpcore__ff_Engagement__c/fields/fferpcore__Description__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Description__c</fullName>
    <description>Description of the engagement.</description>
    <inlineHelpText>Description of the engagement.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>