unpackaged/main/default/objects/fferpcore__ff_Engagement__c/fields/fferpcore__EndDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__EndDate__c</fullName>
    <description>Date on which the engagement ends.</description>
    <inlineHelpText>Date on which the engagement ends.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>