unpackaged/main/default/objects/fferpcore__ff_Engagement__c/fields/fferpcore__StartDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StartDate__c</fullName>
    <description>Date on which the engagement starts.</description>
    <inlineHelpText>Date on which the engagement starts.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>