unpackaged/main/default/objects/fferpcore__ff_Engagement__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__Account__c</columns>
    <columns>fferpcore__StartDate__c</columns>
    <columns>fferpcore__EndDate__c</columns>
    <columns>fferpcore__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>